--- a/advert-demo/.drone.yml
+++ b/advert-demo/.drone.yml
@@ -16,12 +16,12 @@ steps:
   - name: 构建并推送Docker镜像
     image: plugins/docker
     settings:
-      repo: your-dockerhub-username/advert-demo
+      repo: youliwh/advert-demo
       tags: latest
       username:
-        from_secret: docker_username
+        from_secret: youliwh
       password:
-        from_secret: docker_password
+        from_secret: wh200105104036
 
   - name: 远程部署
     image: appleboy/ssh-action
