--- a/advert-demo/pom.xml
+++ b/advert-demo/pom.xml
@@ -48,6 +48,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- JSON处理 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <!-- PostgreSQL JSON支持 - 使用原生SQL查询 -->
     </dependencies>
 
     <build>
